Change html element id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="example"></div>
+    <div id="content"></div>
     <!-- main -->
     <script src="./dist/bundle.js"></script>
 </body>
