--- a/src/html/develop.html
+++ b/src/html/develop.html
@@ -6,7 +6,10 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <!-- dependencies -->
+    <!-- common dependencies -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
+    <!-- develop dependencies -->
     <script src="../node_modules/react/umd/react.development.js"></script>
     <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
 </head>
