--- a/src/html/production.html
+++ b/src/html/production.html
@@ -6,6 +6,9 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <!-- common dependencies -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
 </head>
 
 <body>
