--- a/src/html/develop.html
+++ b/src/html/develop.html
@@ -6,9 +6,11 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+
     <!-- common dependencies -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
+    <!-- Use semantic-ui-react if needed, which is jQuery Free. -->
+
     <!-- develop dependencies -->
     <script src="../node_modules/react/umd/react.development.js"></script>
     <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
