--- a/src/html/production.html
+++ b/src/html/production.html
@@ -6,9 +6,10 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+
     <!-- common dependencies -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
+    <!-- Use semantic-ui-react if needed, which is jQuery Free. -->
 </head>
 
 <body>
