--- a/src/html/develop.html
+++ b/src/html/develop.html
@@ -8,6 +8,10 @@
     </title>
 
     <!-- common dependencies -->
+    <!-- ag-grid -->
+    <link rel="stylesheet" href="https://unpkg.com/ag-grid/dist/styles/ag-grid.css">
+    <link rel="stylesheet" href="https://unpkg.com/ag-grid/dist/styles/ag-theme-balham.css">
+    <!-- semantic-ui -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
     <!-- Use semantic-ui-react if needed, which is jQuery Free. -->
 
