--- a/src/html/develop.html
+++ b/src/html/develop.html
@@ -16,8 +16,8 @@
     <!-- Use semantic-ui-react if needed, which is jQuery Free. -->
 
     <!-- develop dependencies -->
-    <script src="../node_modules/react/umd/react.development.js"></script>
-    <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="../../node_modules/react/umd/react.development.js"></script>
+    <script src="../../node_modules/react-dom/umd/react-dom.development.js"></script>
 </head>
 
 <body>
