--- a/src/html/development.html
+++ b/src/html/development.html
@@ -7,17 +7,22 @@
         <%= htmlWebpackPlugin.options.title %>
     </title>
 
-    <!-- common dependencies -->
-    <!-- ag-grid -->
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid/dist/styles/ag-grid.css">
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid/dist/styles/ag-theme-balham.css">
-    <!-- semantic-ui -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
-    <!-- Use semantic-ui-react if needed, which is jQuery Free. -->
+    <!-- ag-grid-community 19.0.x -->
+    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community@19.0/dist/styles/ag-grid.css">
+    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community@19.0/dist/styles/ag-theme-balham.css">
+    <script crossorigin src="https://unpkg.com/ag-grid-community@19.0/dist/ag-grid-community.min.noStyle.js"></script>
 
-    <!-- develop dependencies -->
-    <script src="../../node_modules/react/umd/react.development.js"></script>
-    <script src="../../node_modules/react-dom/umd/react-dom.development.js"></script>
+    <!-- react 16.5.x -->
+    <script crossorigin src="https://unpkg.com/react@16.5/umd/react.production.min.js"></script>
+
+    <!-- react-dom 16.5.x -->
+    <script crossorigin src="https://unpkg.com/react-dom@16.5/umd/react-dom.production.min.js"></script>
+
+    <!-- semantic-ui 2.3.3 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+
+    <!-- semantic-ui-react 0.82.5 -->
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-react/0.82.5/semantic-ui-react.min.js"></script>
 </head>
 
 <body>
