--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,12 @@
     <!-- react-dom 16.5.x -->
     <script crossorigin src="https://unpkg.com/react-dom@16.5/umd/react-dom.production.min.js"></script>
 
+    <!-- react-redux 5.0.7 -->
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.7/react-redux.min.js"></script>
+
+    <!-- redux 4.0.x -->
+    <script crossorigin src="https://unpkg.com/redux@4.0/dist/redux.min.js"></script>
+
     <!-- semantic-ui 2.3.3 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
 
